--- a/src/components/style.css
+++ b/src/components/style.css
@@ -52,9 +52,8 @@ navbar__search:focus-visible {
 /* carousel */
 
 .main__carousel {
-  /* background-image: var(--carousel-bg); */
+  background-image: var(--carousel-bg);
 
-  background-image: url(../assets/carousel_bg.svg);
   height: 300px;
   background-size: cover;
   background-position: center;
