--- a/src/components/style.css
+++ b/src/components/style.css
@@ -31,29 +31,76 @@ navbar__search:focus-visible {
   background-color: var(--primary-color);
 }
 
-/* accordion */
 
-.accordion {
-  background-color: var(--navbar-bg) !important;
+/* Sidebar style */
+.sidebar {
   width: 100%;
-  color: var(--text-color) !important;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: var(--navbar-bg);
+  color: var(--text-color);
+  box-shadow: 5px 5px 7px var(--button-bg);
+  height: 100%;
+  overflow-y: auto;
+  position: sticky;
+  top: 0;
+}
+.sidebar__title {
+  font-size: 1.25rem;
+  padding: 10px 20px;
+  box-shadow: 0 0px 5px 7px var(--button-bg);
+  background-color: var(--navbar-bg);
+  z-index: 1;
+  position: sticky;
+  top: 0;
 }
 
-.accordion .expand__icon {
-  color: var(--text-color) !important;
+.sidebar__item {
+  padding: 10px 0;
+  transition: background-color 0.3s ease;
 }
 
-.accordion .accordion__item:hover {
+.sidebar__item:hover {
   background-color: var(--primary-color);
-  cursor: pointer;
 }
+
+.sidebar__item--selected {
+  background-color: var(--primary-color);
+}
+
+.sidebar__logo-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.sidebar__logo {
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.sidebar__text {
+  margin-left: 10px;
+  font-weight: 500;
+}
+
+.sidebar__empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.sidebar__empty-icon {
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+
+
+
 
 /* carousel */
 
 .main__carousel {
   background-image: var(--carousel-bg);
-
   height: 300px;
   background-size: cover;
   background-position: center;
@@ -62,14 +109,15 @@ navbar__search:focus-visible {
   overflow: hidden;
 }
 
-.team__emblems {
+.emblems {
   display: flex;
   justify-content: left;
   align-items: center;
   gap: 20px;
+  margin-bottom: 10px;
 }
 
-.team__emblems div.match__Time {
+.emblems div.match__Time {
   width: 230px;
   display: inline-flex;
   justify-content: center;
@@ -77,7 +125,7 @@ navbar__search:focus-visible {
   font-size: 20px;
 }
 
-.team__emblem {
+.emblem {
   width: 60px;
   height: 60px;
   border-radius: 15px;
@@ -90,10 +138,15 @@ navbar__search:focus-visible {
     border-color 0.4s ease;
 }
 
-.team__emblem img {
+.carousel-control-next,
+.carousel-control-prev {
+  width: 5% !important;
+}
+
+.emblem img {
   width: 100%;
   height: 100%;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   object-fit: cover;
 }
 
@@ -153,4 +206,12 @@ navbar__search:focus-visible {
 .accordion__empty-icon {
   font-size: 48px;
   margin-bottom: 8px;
+}
+
+.accordion__item--selected {
+  background-color: var(--primary-color);
+}
+
+.accordion__text.selected {
+  font-weight: bold;
 }
