--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;500;700&display=swap');
+
 :root {
-  --bg-color: #f9f9f9;
+  --bg-color: #f9f9f9 !important;
   --text-color: #1e1e1e;
   --primary-color: #8a8a8a;
   --navbar-bg: #ffffff;
@@ -10,7 +12,7 @@
 
 .dark {
   --carousel-bg: url("./assets/carousel_bg.svg");
-  --bg-color: #0b090a;
+  --bg-color: #0b090a !important;
   --text-color: #ffffff;
   --primary-color: #490fff;
   --navbar-bg: #121212;
@@ -27,15 +29,6 @@
     color var(--transition-speed) var(--transition-type),
     border-color var(--transition-speed) var(--transition-type);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  * {
-    transition:
-      background-color 0.2s ease,
-      color 0.2s ease;
-  }
-}
-
 html.dark {
   color-scheme: dark;
 }
@@ -43,6 +36,7 @@ html.dark {
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
+  font-family: 'Azeret Mono', monospace !important;
 }
 
 a {
