--- a/src/components/TopMatchCarousel/style.css
+++ b/src/components/TopMatchCarousel/style.css
@@ -43,3 +43,59 @@
   outline: none;
   box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
 }
+
+
+/* carousel */
+
+.main__carousel {
+  background-image: var(--carousel-bg);
+  height: 300px;
+  width: 100%;
+  min-width: 600px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 20px;
+  color: var(--text-color);
+  overflow: hidden;
+}
+
+.emblems {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
+.emblems div.match__Time {
+  width: 230px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+.emblem {
+  width: 60px;
+  height: 60px;
+  border-radius: 15px;
+  border: 5px solid var(--button-bg);
+  overflow: hidden;
+  padding: 5px;
+  background-color: var(--bg-color);
+  transition:
+    background-color 0.4s ease,
+    border-color 0.4s ease;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+  width: 5% !important;
+}
+
+.emblem img {
+  width: 100%;
+  height: 100%;
+  /* border-radius: 20px; */
+  object-fit: cover;
+}
