Refactor: Update match display styles in BasicTabs for improved layout and spacing; adjust padding in Tabs header

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -186,7 +186,7 @@ navbar__search:focus-visible {
 }
 
 .tabs__header .css-19kzrtu{
-   padding: 10px 0;
+   padding: 15px;
 }
 
 .tabs__header .MuiTabs-flexContainer {
