--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;500;700&display=swap');
-
 :root {
   --bg-color: #f9f9f9 !important;
   --text-color: #1e1e1e;
-  --primary-color: #8a8a8a;
+  --primary-color: #4f46e5;
+  --primary-color: #8a3ffc;
   --navbar-bg: #ffffff;
   --button-bg: #e5e7eb;
   --carousel-bg: url("./assets/carousel_light_bg.svg");
-  --border-color: #e0e0e0;
+  --border-color: #d1d5db;
+
+  --table-bg: #ffffff;
+  --table-text: #1e1e1e;
+  --table-border: #d1d5db;
+  --table-row-even-bg: #f9fafb;
+  --table-row-odd-bg: #ffffff;
+  --table-row-hover-bg: #e0e7ff;
+
+  --transition-speed: 0.3s;
+  --transition-type: ease-in-out;
 }
 
 .dark {
   --carousel-bg: url("./assets/carousel_bg.svg");
   --bg-color: #0b090a !important;
-  --text-color: #ffffff;
-  --primary-color: #490fff;
+  --text-color: #e5e7eb;
+  --primary-color: #4f46e5;
   --navbar-bg: #121212;
   --button-bg: #1f1f1f;
-  --border-color: #fff;
-}
+  --border-color: #374151;
 
+  --table-bg: #121212;
+  --table-text: #e5e7eb;
+  --table-border: #374151;
+  --table-row-even-bg: #1f2937;
+  --table-row-odd-bg: #111827;
+  --table-row-hover-bg: #4338ca;
+  --transition-speed: 0.3s;
+  --transition-type: ease-in-out;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition:
+  /* transition:
     background-color var(--transition-speed) var(--transition-type),
     color var(--transition-speed) var(--transition-type),
-    border-color var(--transition-speed) var(--transition-type);
+    border-color var(--transition-speed) var(--transition-type); */
 }
+
 html.dark {
   color-scheme: dark;
 }
@@ -37,6 +55,7 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: 'Azeret Mono', monospace !important;
+  min-height: 100vh;
 }
 
 a {
@@ -45,7 +64,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
